archive/fancy_microscope_BackupMar2023/log/fancy_microscope_log_220225_163450.txt
2022-02-25T16:34:50|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "fancy_microscope.py", line 40, in <module>
    app = FancyMicroscopeApp(sys.argv)
  File "C:\Users\ZHao\.conda\envs\scopefoundry\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "fancy_microscope.py", line 26, in setup
    from custommeasure2 import ESRMeasure
  File "C:\Users\Public\quantum_sensing\quantum_sensing\fancy_microscope\custommeasure2.py", line 217
    finally:
          ^
SyntaxError: invalid syntax

